--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@nuxt/ui": "^3.0.2",
     "@nuxtjs/i18n": "^9.5.3",
+    "clsx": "^2.1.1",
     "nuxt": "^3.16.1",
+    "tailwind-merge": "^3.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   }
