--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/ui": "^3.0.2",
     "@nuxtjs/i18n": "^9.5.3",
+    "@nuxtjs/seo": "^3.0.2",
     "clsx": "^2.1.1",
     "nuxt": "^3.16.1",
     "tailwind-merge": "^3.2.0",
